# advanced-systems-lab-project

./: .gitignore  CMakeLists.txt  README.md
Data/Performance Data/: Performance Sheet.xlsx
Data/bvh/: BASEtoyotahover-multires-data.csv  BASEtoyotatouch-multires-data.csv  F16Ctoyotahover-multires-data.csv  F16Ctoyotatouch-multires-data.csv  VECtoyotahover-multires-data.csv  VECtoyotatouch-multires-data.csv
Data/logs/: main-flop-out-1.txt  main-out-cold-cache.txt  main-out-exclude-idx.txt  main-out-flops.txt  main-out-long.txt  main-out-slow-idx.txt  main-out-support-call-no.txt  main-out.txt
Data/svn/: cycles.eps  performance.eps
benchmarking/: add_functions.cpp  common.h  performance_tests.cpp  tsc_x86.h
cmake/: credit.txt  googletest.cmake
plotting/: bar_plot.py  plotting.py
report/: bibl_conf.bib  presentation.odp  report.bbl  report.bcf  report.blg  report.dvi  report.tex
src/: CMakeLists.txt  main.cpp
src/geometry/: CHObject.c  CHObject.h  CMakeLists.txt  LinAlg.c  LinAlg.h  TriMesh.c  TriMesh.h  TriangleTests.h
src/include/: CMakeLists.txt  bvh.c  bvh.h  bvh_f16c.c  bvhstats.h  gjk.c  gjk.h  gjk_soa.c  moeller.c  optimized_gjk.c  vectorized_gjk.c  vectorized_gjk_soa.c
src/util/: OBJ_Loader.h
test/: CMakeLists.txt  TestBVH.cpp  TestBooleanGJK.cpp  Tester.cpp
test/utils/: TestUtils.hpp  TriMesh_Loader.hpp
visualization/: ShapePointsGenerator.py  visualize.py
visualization/test_csv_dirs/01_Square1/: o2.csv
visualization/test_csv_dirs/03_LineOverlap/: o2.csv
visualization/test_csv_dirs/04_SmolLinePointNonOverlap/: o2.csv
(+20 files in other folders)
